# OReilly-2025-11November-data

./: OReilly - 2025-11November-06.html  OReilly - 2025-11November-06.ipynb  OReilly - 2025-11November-13.html  OReilly - 2025-11November-13.ipynb  OReilly - 2025-11November-20.html  OReilly - 2025-11November-20.ipynb  OReilly - 2025-11November-data.ipynb  main.py  mydata.csv  mydata.xlsx  pyproject.toml
